{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 295,
  "lineage": "be694a61-4c36-2d14-7569-d2f2c5d66edf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "droHealth_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:681956716679:loadbalancer/app/droHealth-lb/26389736b347fd7b",
            "arn_suffix": "app/droHealth-lb/26389736b347fd7b",
            "desync_mitigation_mode": "defensive",
            "dns_name": "droHealth-lb-1428475155.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:681956716679:loadbalancer/app/droHealth-lb/26389736b347fd7b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "droHealth-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-04e299a66509bd60e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-035511eebe202a778"
              },
              {
                "subnet_id": "subnet-047635ea01c219ed1"
              },
              {
                "subnet_id": "subnet-0ffb91602f138a0f1"
              }
            ],
            "subnets": [
              "subnet-035511eebe202a778",
              "subnet-047635ea01c219ed1",
              "subnet-0ffb91602f138a0f1"
            ],
            "vpc_id": "vpc-05976af2e9600880a",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_default_subnet.metabase_subnet_a",
            "aws_default_subnet.metabase_subnet_b",
            "aws_default_subnet.metabase_subnet_c",
            "aws_security_group.metabase_sec_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "metabase_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:681956716679:subnet/subnet-035511eebe202a778",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.31.80.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-035511eebe202a778",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "681956716679",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-05976af2e9600880a"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "metabase_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:681956716679:subnet/subnet-047635ea01c219ed1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.31.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-047635ea01c219ed1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "681956716679",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-05976af2e9600880a"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "metabase_subnet_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:681956716679:subnet/subnet-0ffb91602f138a0f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.31.32.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-0ffb91602f138a0f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "681956716679",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-05976af2e9600880a"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:681956716679:vpc/vpc-05976af2e9600880a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0dce9559a6f75cad2",
            "default_route_table_id": "rtb-01c3a3143c0b3bd1c",
            "default_security_group_id": "sg-0c91278e42132e100",
            "dhcp_options_id": "dopt-04c497344c75b50df",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": true,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-05976af2e9600880a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01c3a3143c0b3bd1c",
            "owner_id": "681956716679"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:681956716679:listener/app/droHealth-lb/26389736b347fd7b/1917d8d304f9b210",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:681956716679:targetgroup/drohealth-tg/95a0dbd036647e5c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:681956716679:listener/app/droHealth-lb/26389736b347fd7b/1917d8d304f9b210",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:681956716679:loadbalancer/app/droHealth-lb/26389736b347fd7b",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.droHealth_lb",
            "aws_default_subnet.metabase_subnet_a",
            "aws_default_subnet.metabase_subnet_b",
            "aws_default_subnet.metabase_subnet_c",
            "aws_default_vpc.main",
            "aws_lb_target_group.drohealth_tg",
            "aws_security_group.metabase_sec_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "drohealth_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:681956716679:targetgroup/drohealth-tg/95a0dbd036647e5c",
            "arn_suffix": "targetgroup/drohealth-tg/95a0dbd036647e5c",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200,301,302",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:681956716679:targetgroup/drohealth-tg/95a0dbd036647e5c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "drohealth-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-05976af2e9600880a"
          },
          "dependencies": [
            "aws_default_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "metabase_sec_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:681956716679:security-group/sg-04e299a66509bd60e",
            "description": "Allow Drohealth inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04e299a66509bd60e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Drohealth from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "metabase_sec_group",
            "name_prefix": "",
            "owner_id": "681956716679",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_traffic"
            },
            "tags_all": {
              "Name": "allow_traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-05976af2e9600880a"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:681956716679:security-group/sg-0941d8dd20a343ded",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0941d8dd20a343ded",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-04e299a66509bd60e"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20230120123400505900000001",
            "name_prefix": "terraform-",
            "owner_id": "681956716679",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05976af2e9600880a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.metabase_sec_group"
          ]
        }
      ]
    }
  ]
}